[gd_scene load_steps=8 format=3 uid="uid://dy4w0xtd2ieoi"]

[ext_resource type="Script" uid="uid://ce6aau8dh1425" path="res://scenes/Data/DataQuestion/Table/table.gd" id="1_g23or"]
[ext_resource type="PackedScene" uid="uid://cgmg2jkj72qpm" path="res://scenes/Data/DataQuestion/Table/table_cell.tscn" id="2_2bbrh"]
[ext_resource type="PackedScene" uid="uid://sh843g04k0ge" path="res://scenes/Data/DataQuestion/Table/editable_button.tscn" id="3_lnr2n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3ibh"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.00784314, 0.313726, 0.764706, 1)
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a58w3"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.76, 0.00759999, 0.00759999, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_anqob"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.00784314, 0.313726, 0.764706, 1)
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_auwyl"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.76, 0.00759999, 0.00759999, 1)
corner_radius_bottom_right = 10

[node name="Tables" type="VBoxContainer"]
offset_top = 89.0
offset_right = 120.0
offset_bottom = 89.0
script = ExtResource("1_g23or")
cell_scene = ExtResource("2_2bbrh")
button_scene = ExtResource("3_lnr2n")

[node name="Writable" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Table" type="HBoxContainer" parent="Writable"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Base" type="VBoxContainer" parent="Writable/Table"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Rows" type="HBoxContainer" parent="Writable/Table/Base"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Column" type="VBoxContainer" parent="Writable/Table/Base/Rows"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Text" parent="Writable/Table/Base/Rows/Column" instance=ExtResource("2_2bbrh")]
layout_mode = 2

[node name="RowButtons" type="HBoxContainer" parent="Writable/Table/Base"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="AddRow" type="Button" parent="Writable/Table/Base/RowButtons"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_q3ibh")
text = "+"

[node name="DeleteRow" type="Button" parent="Writable/Table/Base/RowButtons"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_a58w3")
text = "-"

[node name="ColumnButtons" type="VBoxContainer" parent="Writable/Table"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="AddColumn" type="Button" parent="Writable/Table/ColumnButtons"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_anqob")
text = "+"

[node name="DeleteColumn" type="Button" parent="Writable/Table/ColumnButtons"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_auwyl")
text = "-"

[node name="Editable" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Table" type="HBoxContainer" parent="Editable"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Base" type="VBoxContainer" parent="Editable/Table"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Rows" type="HBoxContainer" parent="Editable/Table/Base"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Column" type="VBoxContainer" parent="Editable/Table/Base/Rows"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="EditableButton" parent="Editable/Table/Base/Rows/Column" instance=ExtResource("3_lnr2n")]
layout_mode = 2

[node name="RowButtons" type="HBoxContainer" parent="Editable/Table/Base"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="AddRow" type="Button" parent="Editable/Table/Base/RowButtons"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_q3ibh")
text = "+"

[node name="DeleteRow" type="Button" parent="Editable/Table/Base/RowButtons"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_a58w3")
text = "-"

[node name="ColumnButtons" type="VBoxContainer" parent="Editable/Table"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="AddColumn" type="Button" parent="Editable/Table/ColumnButtons"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_anqob")
text = "+"

[node name="DeleteColumn" type="Button" parent="Editable/Table/ColumnButtons"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_auwyl")
text = "-"

[connection signal="pressed" from="Writable/Table/Base/RowButtons/AddRow" to="." method="_on_add_row_pressed"]
[connection signal="pressed" from="Writable/Table/Base/RowButtons/DeleteRow" to="." method="_on_delete_row_pressed"]
[connection signal="pressed" from="Writable/Table/ColumnButtons/AddColumn" to="." method="_on_add_column_pressed"]
[connection signal="pressed" from="Writable/Table/ColumnButtons/AddColumn" to="Writable/Table" method="_on_add_column_pressed"]
[connection signal="pressed" from="Writable/Table/ColumnButtons/DeleteColumn" to="." method="_on_delete_column_pressed"]
[connection signal="pressed_cell" from="Editable/Table/Base/Rows/Column/EditableButton" to="." method="flip_openness"]
[connection signal="pressed" from="Editable/Table/Base/RowButtons/AddRow" to="." method="_on_add_row_pressed"]
[connection signal="pressed" from="Editable/Table/Base/RowButtons/DeleteRow" to="." method="_on_delete_row_pressed"]
[connection signal="pressed" from="Editable/Table/ColumnButtons/AddColumn" to="." method="_on_add_column_pressed"]
[connection signal="pressed" from="Editable/Table/ColumnButtons/DeleteColumn" to="." method="_on_delete_column_pressed"]
